--- a/thstyle.css
+++ b/thstyle.css
@@ -4,42 +4,41 @@ html {
 }
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-  header{
-    position: absolute;
-    height: 50px;
-    top: 0;
-    left: 0;
-    width: 100%;
-    padding: 30px 100px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    z-index: 100;
-  }
+header {
+  position:fixed;
+  height: 50px;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 30px 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 100;
+}
 
-  .logo img {
-    width: 100%;
-    height: 40vh;
-    position: inherit;
-    padding-top: 30px;
-    
-  }
+.logo img {
+  width: 100%;
+  height: 40vh;
+  position: inherit;
+  padding-top: 30px;
+}
 
-  .navigation ul {
-    display: flex;
-    padding: 0;
-    flex-wrap: nowrap;
-  }
+.navigation ul {
+  display: flex;
+  padding: 0;
+  flex-wrap: nowrap;
+}
 
-  .navigation li {
-    padding-top: 10px;
-    list-style: none;
-  }
+.navigation li {
+  padding-top: 10px;
+  list-style: none;
+}
 
 .navigation li a {
   position: relative;
@@ -53,45 +52,45 @@ html {
   transition: 0.6s;
 }
 
-  .navigation a:hover,
-  .navigation a.active {
-    color: #333;
-  }
+.navigation a:hover,
+.navigation a.active {
+  color: #333;
+}
 
-  .navigation a span {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: white;
-    border-radius: 30px;
-    z-index: -1;
-    transform: scale(0);
-    transition: 0.6s;
-    opacity: 0;
-  }
+.navigation a span {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  border-radius: 30px;
+  z-index: -1;
+  transform: scale(0);
+  transition: 0.6s;
+  opacity: 0;
+}
 
-  .navigation a:hover span,
-  .navigation a.active span {
-    transform: scale(1);
-    opacity: 1;
-  }
+.navigation a:hover span,
+.navigation a.active span {
+  transform: scale(1);
+  opacity: 1;
+}
 
-  .banner {
-    width: 100%;
-    height: 100vh;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    font-family: sans-serif;
-  }
+.banner {
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  font-family: sans-serif;
+}
 
-  img {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-  }
+.banner img {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
 
 .content {
   background-color: rgb(29, 29, 79); /* Menggunakan format RGB */
@@ -100,6 +99,7 @@ html {
   padding: 40px;
   font-family: sans-serif;
   position: relative;
+  padding-top: 4rem;
 }
 
 .content h1 {
@@ -109,33 +109,32 @@ html {
 }
 
 .content p {
-    text-align: justify;
-    line-height: 20 px;
-    letter-spacing: 1px;
-    text-indent: 50px;
-    width: 100%;
-    max-width: 900px;
-    margin: auto;
-    margin-top: 40px;
-    margin-bottom: 40px;
-    opacity: 0.5;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  text-align: justify;
+  line-height: 20 px;
+  letter-spacing: 1px;
+  text-indent: 50px;
+  width: 100%;
+  max-width: 900px;
+  margin: auto;
+  margin-top: 40px;
+  margin-bottom: 40px;
+  opacity: 0.5;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .layer-2 {
-    position: absolute;
-    color: white;
-    text-align: center;
+  position: absolute;
+  color: white;
+  text-align: center;
 }
 .layer-2 h1 {
-    padding-top: 250px;
-    font-size: 7ch;
+  padding-top: 250px;
+  font-size: 7ch;
 }
 .teks {
   font-family: poppins;
   font-weight: 500;
 }
-
 
 #Artists .container {
   background-color: white; /* Menggunakan format RGB */
@@ -162,49 +161,49 @@ html {
   transition: 0.5s;
 }
 
-.img-box1{
+.img-box1 {
   background: url(leonardo.jpg);
   background-size: cover;
   background-position: center;
 }
 
-.img-box2{
+.img-box2 {
   background: url(Rembrandt.jpg);
   background-size: cover;
   background-position: center;
 }
 
-.img-box3{
+.img-box3 {
   background: url(afandi.png);
   background-size: cover;
   background-position: center;
 }
 
-.img-box4{
+.img-box4 {
   background: url(paul.jpg);
   background-size: cover;
   background-position: center;
 }
 
-.img-box5{
+.img-box5 {
   background: url(salvador.jpg);
   background-size: cover;
   background-position: center;
 }
 
-.img-box6{
+.img-box6 {
   background: url(claude\ monet.jpg);
   background-size: cover;
   background-position: center;
 }
 
-.img-box7{
+.img-box7 {
   background: url(raden-saleh.jpeg);
   background-size: cover;
   background-position: center;
 }
 
-.img-box8{
+.img-box8 {
   background: url(vicent\ van.jpg);
   background-size: cover;
   background-position: center;
@@ -214,9 +213,6 @@ html {
   width: 300px;
   cursor: pointer;
 }
-
-
-
 
 .seveg {
   width: 100%;
@@ -245,6 +241,7 @@ svg {
   padding: 40px;
   font-family: sans-serif;
   position: relative;
+  padding-top: 4rem;
 }
 
 #Artists h1 {
@@ -255,26 +252,23 @@ svg {
 }
 
 #Artists p {
-    color: black;
-    text-align: center;
-    line-height: 20 px;
-    letter-spacing: 1px;
-    text-indent: 50px;
-    width: 100%;
-    max-width: 900px;
-    margin: auto;
-    margin-top: 40px;
-    opacity: 0;
-    transition: 0.7s;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: black;
+  text-align: center;
+  line-height: 20 px;
+  letter-spacing: 1px;
+  text-indent: 50px;
+  width: 100%;
+  max-width: 900px;
+  margin: auto;
+  margin-top: 40px;
+  opacity: 0;
+  transition: 0.7s;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 #Artists p:hover {
   opacity: 1;
 }
-
-
-
 
 #video {
   background-color: rgb(29, 29, 79); /* Menggunakan format RGB */
@@ -284,10 +278,11 @@ svg {
   position: relative;
   padding: 40px;
   width: 100%;
-  height: 100vh;
+  height: 120vh;
   display: flex;
   justify-content: center;
   text-align: center;
+  padding-top: 4rem;
 }
 
 #video img {
@@ -303,7 +298,7 @@ svg {
 }
 
 .vid {
-  position:absolute;
+  position: absolute;
   width: 100%;
   bottom: 0;
   display: flex;
@@ -323,7 +318,7 @@ svg {
 }
 
 .video-preview::after {
-  content: '';
+  content: "";
   position: absolute;
   inset: 0;
   background: rgba(0, 0, 0, 0.2);
@@ -375,21 +370,21 @@ svg {
 
 @keyframes show {
   from {
-      clip-path: circle(0.4% at 50% 50%);
+    clip-path: circle(0.4% at 50% 50%);
   }
   to {
-      clip-path: circle(100% at 50% 50%);
+    clip-path: circle(100% at 50% 50%);
   }
 }
 
-.is-animated{
+.is-animated {
   animation: show 500ms ease-in-out forwards;
 }
 
-.video-modal{
+.video-modal {
   position: absolute;
   inset: 0;
-  background:rgba(255, 255, 255, 0.8);
+  background: rgba(255, 255, 255, 0.8);
   z-index: 20;
   align-items: center;
   justify-content: center;
@@ -411,7 +406,7 @@ svg {
   height: 50%;
 }
 
-.video-modal .video iframe{
+.video-modal .video iframe {
   width: 100%;
   height: 100%;
 }
@@ -437,15 +432,17 @@ svg {
   padding-top: 20px;
   font-family: poppins;
   color: white;
-  position: absolute ;
+  position: absolute;
   justify-content: center;
   align-items: center;
 }
 
-
+#gallery {
+  padding-top: 4rem;
+}
 .cuy {
-  background-color: rgb(29, 29, 79); /* Menggunakan format RGB */
-  color: white;
+  background-color: white; /* Menggunakan format RGB */
+  color: rgb(29, 29, 79);
   text-align: center;
   padding: 40px;
   font-family: sans-serif;
@@ -453,7 +450,34 @@ svg {
 }
 
 .cuy h1 {
-  font-size: 40px;
+  font-size: 45px;
   padding-top: 20px;
-  font-family: sans-serif;
+  font-family: poppins;
+  padding: 20px;
+}
+
+.gallery-container {
+  margin: 20px auto;
+  columns: 4;
+  column-gap: 20px;
+  padding-top: 50px;
+  background-color: rgb(29, 29, 79);
+  border-radius: 15px;
+  padding: 20px;
+  padding-top: 40px;
+}
+.gallery-container .box {
+  margin-bottom: 20px;
+  break-inside: avoid;
+  transition: 500ms;
+}
+.gallery-container .box img {
+  max-width: 100%;
+  border-radius: 15px;
+}
+.gallery-container .box:hover{
+  scale: 1.05;
+  transition: 600ms;
+  cursor: pointer;
+  opacity: 0.8;
 }
